c4prj2_input/grade.txt
Grading at Fri Jun 26 03:30:56 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:21:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void future_cards_from_deck(deck_t * deck,future_cards_t *fc){
 ^
future.c:32:1: error: expected declaration or statement at end of input
 }
 ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
